--- a/Arbeit/Arbeit.tex
+++ b/Arbeit/Arbeit.tex
@@ -15,7 +15,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{subfigure}
 \usepackage{subscript}
-\title{Bikelight}
+\title{\textbf{Bikelight}}
 \author{Farid Akbar Tabrizi, Jakob Degmair \& Ruben Haag}
 \date{}
 \begin{document}
@@ -83,14 +83,14 @@ Das menschliche Auge nimmt Bilder in einer Frequenz f\textsubscript{Auge} von 10
 \begin{align}
 v = \frac{\pi \cdot f\textsubscript{Auge} \cdot d \cdot 3,6}{4}
 \end{align}
-Also beträgt die Mindestgeschwindigkeit rund $v \approx 17\frac{km}{h}$ bei einem 24\grqq\ Rad, um ein vollständiges Bild zu erkennen. Die Geschwindigkeit, bei der schon ein Bild zu erkennen ist, ist jedoch kleiner, weil das Gehirn ein Bild selbst vervollständigt. Dem Gehirn genügt es, einige Konturen wahrzunehmen, um ein Bild oder Objekt zu erkennen, da es den Rest aus Erfahrung und Fantasie ergänzt\textsuperscript{18}.
+Also beträgt die Mindestgeschwindigkeit rund $v \approx 17\frac{km}{h}$ bei einem 24\grqq\ Rad, um ein vollständiges Bild zu erkennen. Die Geschwindigkeit, bei der schon ein Bild zu erkennen ist, ist jedoch kleiner, weil das Gehirn ein Bild selbst vervollständigt. Dem Gehirn genügt es, einige Konturen wahrzunehmen, um ein Bild oder Objekt zu erkennen, da es den Rest aus Erfahrung und Logik ergänzt\textsuperscript{18}.
 \subsection{Ansteuerung des LED Streifens}
 Der verwendete LED-Streifen hat die Modellnummer WS2812B und wird wie folgt angesteuert\textsuperscript{19}:
-Jede LED des LED-Streifens wird durch ein 24Bit Signal angesteuert, das mittels Pulsweitenmodulation (PWM) vom Raspberry Pi auf diesen übertragen wird. Bei der PWM wird 0V und 5V mit einer Pulsdauer $t_{Puls}$ bei einer Frequenz $f_{Puls}$ generiert. Der Quotient aus $t_{Puls}$ und $f_{Puls}$ ist der Tastgrad $\eta_{Puls}$. Demnach liegt nur noch eine durchschnittliche Spannung $U_{Puls}$ von $\eta_{Puls} \cdot 5V$ an. Die Farbanteile Grün, Rot und Blau werden je über acht bit angesteuert, so dass man pro Pixel 2\textsuperscript 8 also 256 und mit allen drei LEDs 16.777.216 verschiedene Farben anzeigen kann. Die Reihenfolge der Farbansteuerung ist in folgendem Diagramm verdeutlicht:
+Jede LED des LED-Streifens wird durch ein 24Bit Signal angesteuert, das mittels Pulsweitenmodulation (PWM) vom Raspberry Pi auf diesen übertragen wird. Die Farbanteile Grün, Rot und Blau werden je über acht Bit angesteuert, so dass man pro Pixel 2\textsuperscript 8 also 256 und mit allen drei LEDs 16.777.216 verschiedene Farben anzeigen kann. Die Reihenfolge der Farbansteuerung ist in folgendem Diagramm verdeutlicht:
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=16cm]{rgbtabelle.png}
-	\caption{Reihenfolge der Bits bei der Ansteuerung einer LED des LED-Streifens}
+	\caption{Reihenfolge der Bits bei der Ansteuerung einer LED des LED-Streifens, wobei jede Farbe über acht Bit angesteuert wird\textsuperscript{19}}
 	\label{bits}
 \end{figure}
 Falls nach diesem 24Bit Signal, innerhalb der Taktung\textsuperscript{19} noch weitere Signale an den LED-Streifen übertragen werden, so werden diese über den DOUT(siehe Abbildung 4) Anschluss an die zweite LED übertragen, die wiederum nur die ersten 24Bit für sich selbst übernimmt und den Rest iterativ weiterschickt.
@@ -178,7 +178,7 @@ Nach ersten misslungenen Versuchen mit Kunststoffhalterungen haben wir uns aus S
 	\caption{Skizze des Aufbaus}
 	\label{Skizze}
 \end{figure}
-An Stelle der Märklin-Metall-Halterung haben wir eine Platine aus Epoxydharz entworfen und der Ätzvorgang ist in Arbeit. Diese Platine wird von außen mit Hilfe von Katzenaugen befestigen.  
+An Stelle der Märklin-Metall-Halterung haben wir eine Platine aus Epoxydharz entworfen und der Ätzvorgang ist in Arbeit. Diese Platine wird von außen mit Hilfe von Speichenreflektoren befestigen.  
 \section{Ergebnis}
 Uns ist es gelungen, eine interaktivere, stilvollere und zum gleichen Maße sichere Lösung, im Vergleich zu einer Warnweste zu bauen. Es ist dahingehend stilvoller, da man mit diesem Speichendisplay jedes Bild seiner Wahl anzeigen lassen kann, welches zusätzlich die Sicherheit eines Fahrradfahrers erhöht.
 Unser Speichendisplay ist dazu noch günstiger als vergleichbare Modelle. Wie man anhand der Auflistung der Kosten für Materialien sieht, beschränken sich die Materialkosten auf nur zirka 84 \euro\ (siehe Tabelle \ref{Material}). Aufgrund der Trägheit des Auges des Betrachters und der konstant hohen Geschwindigkeit des Rades, entsteht für den Betrachter der Eindruck eines ruhenden Bildes. Somit gelingt es uns, ein scheinbar ruhendes Bild auf dem Speichendisplay zu produzieren. Es ist uns damit auch gelungen, ein Stoppschild und andere Verkehrszeichen auf dem Speichendisplay anzuzeigen.
@@ -198,7 +198,7 @@ Nach einem ersten Start unseres Programmes haben wir festgestellt, dass der Rasp
 \end{figure}
 \\Aus diesem Grund haben wir uns für den schnelleren Raspberry Pi 3 entschieden, den wir auch in Zukunft weiter verwenden werden. Der passt jedoch leider in keine für uns momentan verfügbare wasserdichte Verteilerbox. Daher ist das Speichendisplay momentan an einem Fahrrad noch nicht bei jedem Wetter einsetzbar.
 \subsection{Geplante Verbesserungen}
-Wir haben vor, unsere gesamte Apparatur wasserfest zu machen, damit man bei fast allen Wetterbedingungen mit dem Speichendisplay fahren kann. Zum Steuern des Raspberry Pi planen wir den Raspberry Pi eine Website hosten zu lassen, auf die ein Nutzer über eine W-LAN Verbindung zum Raspberry Pi zugreifen und Bilder von seinem Endgerät auf den Raspberry Pi hochladen kann. Zusätzlich möchten wir insgesamt drei Magnetsensoren an das Rad montieren, um damit die Drehrichtung des Rades zu ermitteln. Somit ist Motagerichtung des Bikelights egal. 
+Wir haben vor, unsere gesamte Apparatur wasserfest zu machen, damit man bei fast allen Wetterbedingungen mit dem Speichendisplay fahren kann. Zum Steuern des Raspberry Pi planen wir, dass ein Nutzer über eine W-LAN Verbindung auf den Raspberry Pi zugreifen und Bilder von seinem Endgerät(z.B. Smartphone) auf den Raspberry Pi hochladen kann. Zusätzlich möchten wir insgesamt drei Magnetsensoren an das Rad montieren, um damit die Drehrichtung des Rades zu ermitteln. Damit wäre Montagerichtung des Bikelights egal. 
 \section{Zusammenfassung}
 Alles in allem ist das Speichendisplay eine interaktive, multifunktionale, kostengünstige und sicherheitsfördernde Anzeige, die jedoch noch kleine Kinderkrankheiten hat. Mit diesem Speichendisplay erhoffen wir uns, mehr Menschen zum sicheren Fahrradfahren, auch im Dunkeln, zu begeistern.
 \section{Anhang}
@@ -247,23 +247,21 @@ https://cdn-shop.adafruit.com/datasheets/WS2812B.pdf[Zugang am 20.2., um 8:00 Uh
 Wir vom Projekt \glqq Speichendisplay\grqq\ bedanken uns sehr bei der Fahrradwerkstatt der Holzkirche Lichterfelde für die Spende einer Fahrradgabel, ohne die unser Projekt nicht möglich gewesen wäre. Ebenfalls bedanken wir uns bei unserem Betreuer René Gorriz vom Paulsen-Gymnasium, der uns bei unserem Projekt tatkräftig unterstützt.
 \subsection{Kostenkalkulation und Materialliste}
 \begin{table}[H]
-	\caption{Materialübersicht}
-	\centering
-		\begin{tabular}{|c|c|}
-			\hline
-			 Material & Kosten\\  
-			\hline
-			Raspberry Pi 3\textsuperscript{13} & 36,99\euro \\
-			Platine\textsuperscript{16} & 0,95\euro \\
-			Platinenbox\textsuperscript{12} & 1,29\euro \\
-			Kabel\textsuperscript{14} & 2,58\euro \\
-			Halterung & 15,00\euro \\
-			LED-Streifen\textsuperscript{15} & 17,14\euro \\
-			Akkupack\textsuperscript{17}	& 10,99\euro \\
-			\hline
-			Summe & 84,94\euro\\
-			\hline
-		\end{tabular}
+	\begin{tabular}{|c|c|}
+		\hline
+		 Material & Kosten\\  
+		\hline
+		Raspberry Pi 3\textsuperscript{13} & 36,99\euro \\
+		Platine\textsuperscript{16} & 0,95\euro \\
+		Platinenbox\textsuperscript{12} & 1,29\euro \\
+		Kabel\textsuperscript{14} & 2,58\euro \\
+		Halterung & 15,00\euro \\
+		LED-Streifen\textsuperscript{15} & 17,14\euro \\
+		Akkupack\textsuperscript{17}	& 10,99\euro \\
+		\hline
+		Summe & 84,94\euro\\
+		\hline
+	\end{tabular}
 	\label{Material}
 \end{table}
 \end{document}
